--- a/package.json
+++ b/package.json
@@ -7,10 +7,20 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "axios": "^1.6.4",
+        "@vitejs/plugin-vue": "^5.1.3",
+        "axios": "^1.7.6",
         "bootstrap": "^5.3.3",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0",
         "sass": "^1.56.1",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vue-loader": "^17.4.2",
+        "vue-template-compiler": "^2.7.16"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "pinia": "^2.2.2",
+        "vue": "^3.4.38",
+        "vue-router": "^4.0.13"
     }
 }
